# three-system-trading

./: .gitignore  AI_HANDOFF.md  CHANGELOG.md  README.md  TODO.md  pyproject.toml
adapters/: __init__.py  ibkr.py
config/: crypto_paper.json
config/fees/: coinbase.yaml  ibkr_futures.yaml  ibkr_options.yaml  kraken.yaml
core/: __init__.py  clock.py  events.py  execution_mode.py  risk.py  sizing.py  state.py
crypto/: __init__.py  capabilities.py  health.py  normalize.py  order_manager.py  router.py  symbols.py
crypto/adapters/: __init__.py  base.py  coinbase.py  kraken.py  paper.py
data/: futures_chain.py  quality.py  recorder.py  store.py
data/feeds/: __init__.py  coinbase.py  kraken.py
engines/: __init__.py  backtest_engine.py  crypto_paper_engine.py  fees.py  trend_backtest.py
ops/: __init__.py  deploy.sh  journal.py  monitor.py  paper_deployment_status.md
ops/systemd/: README.md  crypto-paper.env.example  data-recorder.env.example  ibkr-paper.env.example  trading-crypto-diff.service  trading-crypto-diff.timer  trading-crypto-paper.service  trading-crypto-quality.service  trading-crypto-quality.timer  trading-data-recorder.service  trading-ibkr-stop-verify.service  trading-ibkr-stop-verify.timer
research/: __init__.py  backfill_trend_data.py  trend_ts_backtest_report.md  trend_ts_equity_curve.csv  trend_ts_oos_consumed.json  trend_ts_oos_signoff.md  trend_ts_perturbation.csv  trend_ts_protocol_status.md  trend_walkforward.py
strategies/: __init__.py  buy_and_hold.py  trend_ts.py  types.py
tests/fixtures/: buy_and_hold_expected.csv
(+32 files in other folders)
