[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "three-system-trading"
version = "0.1.0"
description = "Shared deterministic core for a three-system automated trading platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42,<47",
    "exchange-calendars>=4.12,<5",
    "httpx>=0.28,<1",
    "ib_async>=2.1,<3",
    "PyJWT>=2.8,<3",
    "pyarrow>=19,<24",
    "PyYAML>=6.0.2,<7",
    "websockets>=15,<17",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100,<7",
    "mypy>=1.10,<2",
    "python-dotenv>=1.0,<2",
    "pytest>=8.2,<9",
    "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
include = ["core*", "data*", "strategies*", "adapters*", "crypto*", "engines*", "ops*", "research*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "live_ibkr: opt-in tests requiring IB Gateway paper account connectivity",
    "live_coinbase: opt-in tests requiring Coinbase credentials and internet access",
    "live_kraken: opt-in tests requiring Kraken credentials and internet access",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["core"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
